syntax = "proto2";

import "kismet.proto";
import "datasource.proto";

package KismetSdrRtl433;

// RTL433 report; rtl_433 gives us JSON, we pass it on
// RTL433DATAREPORT
message SdrRtl433DataReport {
    optional KismetDatasource.SubGps gps = 1;
    optional KismetExternal.MsgbusMessage message = 2;
    optional string warning = 3;
    optional KismetDatasource.SubSignal signal = 4;
    required string rtljson = 5;
}

